# doctors

./: .env.example  .gitignore  Dockerfile  INSTALL.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: exceptions.py  main.py
src/api/: core.py
src/api/dto/: appointments.py  base.py  doctors.py
src/api/routes/: appointments.py  doctors.py
src/core/: config.py  db.py
src/db/: env.py  models.py
src/db/versions/: 8a21bebfaf86_.py
src/repo/: appointment.py  base.py  doctors.py
src/schemas/: appointment.py  doctors.py
src/service/: appointments.py  base.py  doctors.py
src/utils/: dates.py
