
[tool.poetry]
name = "doctors"
version = "0.1.0"
description = ""
authors = ["Vlad <vys@jetton.games>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.1"
fastapi = "^0.114.2"
sqlalchemy = "^2.0.34"
pydantic-settings = "^2.5.2"
uvicorn = "^0.30.6"
uvicorn-worker = "^0.2.0"
alembic = "^1.13.2"
psycopg-binary = "^3.2.1"
psycopg = "^3.2.2"
greenlet = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
